--- a/SnipeZilla Server Manager/bin/php.ini
+++ b/SnipeZilla Server Manager/bin/php.ini
@@ -501,7 +501,7 @@ error_reporting = E_ALL & ~E_DEPRECATED
 ; Development Value: On
 ; Production Value: Off
 ; https://php.net/display-errors
-display_errors = On
+display_errors = Off
 
 ; The display of errors which occur during PHP's startup sequence are handled
 ; separately from display_errors. We strongly recommend you set this to 'off'
@@ -588,7 +588,7 @@ report_memleaks = On
 ; empty.
 ; https://php.net/error-log
 ; Example:
-error_log = 
+error_log =error-log.txt 
 ; Log errors to syslog (Event Log on Windows).
 ;error_log = syslog
 
